# protea-method

./: .gitignore  .readthedocs.yaml  .smell-baseline.json  CHANGELOG.md  Dockerfile  README.md  method_main.py  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: ci.yml  coauthor-guard.yml  docker.yml  docs.yml  publish.yml  security.yml  stash-audit.yml
docker/: DOCKERHUB_README.md  FUNCTIONBENCH_METHODCARD.md  RELEASE_RUNBOOK.md  example_run.sh  example_run_selfcontained.sh
docs/source/: conf.py  container_usage.rst  contributing.rst  index.rst  inference_flow.rst  overview.rst  own_reference_cutoff.rst  quickstart.rst
docs/source/reference/: anc2vec.rst  cutoff.rst  embed.rst  feature_enricher.rst  index.rst  io.rst  knn_search.rst  lineage.rst  method_main.rst  pca_cache.rst  pipeline.rst  protea_method.rst  reranker.rst
src/protea_method/: __init__.py  anc2vec.py  cutoff.py  feature_enricher.py  knn_search.py  lineage.py  pca_cache.py  pipeline.py  reranker.py
src/protea_method/embed/: __init__.py  backend.py  cache.py
src/protea_method/io/: __init__.py  lafa_tsv.py  loaders.py
src/protea_method/mil/: __init__.py  head.py
tests/: test_anc2vec.py  test_aspect_separated.py  test_contracts_conformance.py  test_cutoff.py  test_embed.py  test_feature_enricher.py  test_knn_search.py  test_knn_search_faiss.py  test_knn_search_sparse.py  test_knn_search_torch.py  test_lafa_tsv.py  test_lineage.py  test_loaders.py  test_method_main.py  test_mil_head.py  test_payload_roundtrip.py  test_pca_cache.py  test_pipeline.py  test_reranker.py  test_smoke.py
tests/fixtures/: tiny.fasta  tiny.gaf  tiny.obo
