[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "protea-method"
version = "0.3.1"
description = "Pure inference: KNN search, feature compute, apply reranker. Standalone library; no FastAPI, no SQLAlchemy."
authors = ["Francisco Miguel Pérez Canales <frapercan1@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "protea_method", from = "src" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]

[tool.poetry.dependencies]
# Pinned to 3.12 to match the protea-contracts constraint upstream.
# Broadening to 3.10/3.11 requires lowering protea-contracts first
# (its pyproject pins 3.12 too); deferred to a coordinated bump.
python = ">=3.12,<4.0"
# Hard rule: no FastAPI, no SQLAlchemy, no protea-core.
# This is the slim shipping path for the inference method.
"protea-contracts" = { git = "https://github.com/frapercan/protea-contracts.git", branch = "main" }
numpy = ">=1.24"
pandas = ">=2.0"
lightgbm = ">=4.0"
faiss-cpu = ">=1.7"
# Optional. Pulled in only with the `mil` extra (D15 distribution
# discipline). CPU torch wheels add ~250 MB and are only needed by
# the gated-attention MIL head in `protea_method.mil`. The default
# install path (`pip install protea-method`) stays slim and
# torch-free.
torch = { version = ">=2.0,<3.0", optional = true }
# In-container embedding extras (LAFA-EMB.1). protea-backends ships
# the ESM / T5 / Ankh / ESM-C plugins behind its own extras; pulling
# the package only with [esm] / [t5] keeps the wheel set minimal in
# the corresponding installs of this package.
transformers = { version = ">=4.40", optional = true }
sentencepiece = { version = ">=0.2", optional = true }
protea-backends = { git = "https://github.com/frapercan/protea-backends.git", branch = "main", optional = true }

[tool.poetry.extras]
# `pip install protea-method[mil]` enables the MIL head. CPU users
# get the default pypi wheel; GPU users follow the README recipe to
# swap in the CUDA wheel after the base install.
mil = ["torch"]
# `pip install protea-method[esm]` enables the in-container ESM-2
# embedder used by LAFA self-contained mode. Brings torch +
# transformers + protea-backends. Champion config esm2_t36_3B
# downloads ~12 GB of weights on first run (HF_HOME cached).
esm = ["torch", "transformers", "protea-backends"]
# `pip install protea-method[t5]` enables the ProstT5 / ProtT5
# embedder. Adds sentencepiece on top of the esm extras stack.
t5 = ["torch", "transformers", "sentencepiece", "protea-backends"]

[tool.poetry.group.dev.dependencies]
pytest = ">=7"
pytest-cov = ">=4"
ruff = ">=0.1"
mypy = ">=1.7"
pandas-stubs = ">=2.0"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
sphinx = ">=7"
alabaster = ">=0.7"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "N", "RUF"]
# N803/N806 (uppercase Q/R/X/y in args and locals): kept off because
# numpy / ML code uses uppercase to mark matrices vs lowercase for
# vectors; renaming hurts readability without a quality benefit.
# RUF002 (Unicode lookalikes in docstrings): scientific text uses `×`,
# `→`, `≤` legitimately; ASCII rewrites would obscure meaning.
ignore = ["E501", "N803", "N806", "RUF002"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_ignores = true
# numpy's generic ``ndarray`` type arguments add a lot of ``Any, Any``
# bloat without runtime benefit; tighten when ``numpy.typing`` stabilises.
disallow_any_generics = false

[[tool.mypy.overrides]]
module = ["lightgbm", "lightgbm.*", "faiss", "faiss.*"]
ignore_missing_imports = true

# torch is an optional extra (see [tool.poetry.extras] mil). Strict
# mypy would otherwise fail in environments where the extra is not
# installed; the runtime guard in protea_method.mil.head raises a
# clear ImportError so the missing-stubs path here is harmless.
[[tool.mypy.overrides]]
module = ["torch", "torch.*"]
ignore_missing_imports = true

# sphinx is a docs-only dependency, never a runtime import of the package.
# When the optional `docs` group is installed into the same venv as the
# type-checker, a transitive import would otherwise drag mypy into sphinx's
# 3.12-only `type` statements (this project pins python_version = "3.10").
# Skip following it so mypy is identical with or without the docs extras.
[[tool.mypy.overrides]]
module = ["sphinx", "sphinx.*"]
ignore_missing_imports = true
follow_imports = "skip"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --strict-markers"
markers = [
    "regression_v226: end-to-end regression against the LB.2 v226 champion (selective avg Fmax 0.6215). Skipped unless PROTEA_LAB_DATA + lab fixtures are present.",
    "requires_esm2: integration test against the real ESM-2 backend. Skipped unless PROTEA_HAS_ESM2=1 in the environment.",
    "gpu: tests that exercise the torch CUDA path. Skipped unless torch.cuda.is_available().",
]
